--- a/MinisterioEducacionDF/Properties/launchSettings.json
+++ b/MinisterioEducacionDF/Properties/launchSettings.json
@@ -15,6 +15,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7121;http://localhost:5279",
+      "launchUrl": "https://localhost:7121/scalar/v1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
